# Metinvest-task

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: endpoints.py
app/core/: config.py
app/models/: database.py  generate_fake_data.py  schemas.py
app/services/: orders.py
app/tasks/: celery.py
app/tests/: test_api.py
